--- a/_posts/2018-08-27-1.md
+++ b/_posts/2018-08-27-1.md
@@ -1,10 +1,8 @@
 ---
 layout:     post
-title:      个人博客搭建大成功！
-subtitle:   纪念一下(xixixi)
-date:       2018-08-27
-author:     Otone
-header-img: img/post-8-27-1.jpg
+title:      Assignment 2
+date:       2023-03-22   
+header-img: img/nasa.jpg
 catalog: true
 tags:
     - blog
@@ -21,6 +19,3 @@ tags:
 
 那么就是这样，欢迎大家留言交流，交换友链也是可以的哦！
 
-下面放老婆图(xd
-
-![miku](https://puu.sh/BmI9f/1e4d83a0f1.jpg)
